varahi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varahi-frontend-deployment-dev
  namespace: varahi # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sathish8329/varahi:1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: varahi-frontend-service-dev
  namespace: engage  # Specify the namespace here
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
